--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,23 +26,30 @@
 		<div class="toolbar_bottom">
 			<%= image_tag("/assets/images/logo-1-cropped.png",
 										class: "image--logo_cropped") %>
-			<%= image_tag("/assets/icons/facebook-flat-minimalistic-circles-64x64.png",
-										class: ["facebook-icon", "icon"]) %>
-			<%= image_tag("/assets/icons/feed-icon-28x28.png",
-										class: "feed-icon") %>
-			<%= image_tag("/assets/icons/googleplus-flat-minimalistic-circles-64x64.png",
-										class: ["googleplus-icon", "icon"]) %>
-			<%= image_tag("/assets/icons/instagram-flat-minimalistic-circles-64x64.png",
-										class: ["instagram-icon", "icon"]) %>
-			<%= image_tag("/assets/icons/linkedin-flat-minimalistic-circles-64x64.png",
-										class: ["linkedin-icon", "icon"]) %>
-			<%= image_tag("/assets/icons/skype-flat-minimalistic-circles-64x64.png",
-										class: ["skype-icon", "icon"]) %>
-			<%= image_tag("/assets/icons/twitter-flat-minimalistic-circles-64x64.png",
-										class: ["twitter-icon", "icon"]) %>
-			<%= image_tag("/assets/icons/youtube-2-flat-minimalistic-circles-64x64.png",
-										class: ["youtube-icon", "icon"]) %>
+			<a href="http://www.facebook.com/" target="_blank">
+				<%= image_tag("/assets/icons/facebook-flat-minimalistic-circles-64x64.png",
+											class: ["facebook-icon", "icon"]) %></a>
+			<a href="http://www.rss.com/" target="_blank">
+				<%= image_tag("/assets/icons/feed-icon-28x28.png",
+											class: "feed-icon") %></a>
+			<a href="http://plus.google.com/" target="_blank">
+				<%= image_tag("/assets/icons/googleplus-flat-minimalistic-circles-64x64.png",
+											class: ["googleplus-icon", "icon"]) %></a>
+			<a href="http://www.instagram.com/" target="_blank">
+				<%= image_tag("/assets/icons/instagram-flat-minimalistic-circles-64x64.png",
+											class: ["instagram-icon", "icon"]) %></a>
+			<a href="http://www.linkedin.com/" target="_blank">
+				<%= image_tag("/assets/icons/linkedin-flat-minimalistic-circles-64x64.png",
+											class: ["linkedin-icon", "icon"]) %></a>
+			<a href="http://www.skype.com/" target="_blank">
+				<%= image_tag("/assets/icons/skype-flat-minimalistic-circles-64x64.png",
+											class: ["skype-icon", "icon"]) %></a>
+			<a href="http://www.twitter.com/" target="_blank">
+				<%= image_tag("/assets/icons/twitter-flat-minimalistic-circles-64x64.png",
+											class: ["twitter-icon", "icon"]) %></a>
+			<a href="http://www.youtube.com/" target="_blank">
+				<%= image_tag("/assets/icons/youtube-2-flat-minimalistic-circles-64x64.png",
+											class: ["youtube-icon", "icon"]) %></a>
 		</div>
-
 	</body>
 </html>
