--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Temp</title>
+		<title>Romp International</title>
 		<%= stylesheet_link_tag "/assets/application"%>
 		<%= javascript_include_tag "/assets/application" %>
 		<%= csrf_meta_tags %>
