Added central sass files for the base and helpers directories.  And updated the application.scss file.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,9 +1,5 @@
-@import "helpers/typography";
-@import "helpers/gradients";
-@import "base/font_families";
-
-@import "base/normalize";
-@import "base/global";
+@import "helpers/helpers";
+@import "base/base";
 @import "layout/settings";
 @import "themes/themes";
 @import "controllers/controllers";
