Converted a css comment to a sass comment.

--- a/app/assets/stylesheets/base/font_families.scss
+++ b/app/assets/stylesheets/base/font_families.scss
@@ -3,7 +3,7 @@
 @include font-face('A850_Roman', 'fonts/A850-Roman-BoldItalic', bold italic);
 @include font-face('A850_Roman', 'fonts/A850-Roman-Bold', bold);
 @include font-face('A850_Roman', 'fonts/A850-Roman-Italic', normal, italic);
-/* @include font-face('A850_Roman', 'fonts/A850-Roman-Medium'); */
+// @include font-face('A850_Roman', 'fonts/A850-Roman-Medium');
 @include font-face('A850_Roman', 'fonts/A850-Roman-Regular');
 @include font-face('Austin', 'fonts/Austin-Bold', bold);
 @include font-face('Austin', 'fonts/Austin-Italic', normal, italic);
