Updated the Contact page.

--- a/app/views/dashboard/contact.html.erb
+++ b/app/views/dashboard/contact.html.erb
@@ -1,2 +1,6 @@
-<h1>Dashboard#contact</h1>
-<p>Find me in app/views/dashboard/contact.html.erb</p>
+<div class="content">
+	Telephone: (246) 236-4828
+	Email: rompinternational@gmail.com
+	Band House Address:
+	White Park Road, St. Michael, Barbados
+</div>
