Made some corrections to the user functionality.

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -4,6 +4,6 @@
 		<%= u.email %>
 		<%= link_to 'Show', user_path(u) %>
 		<%= link_to 'Edit', edit_user_path(u) %>
-		<%= link_to 'Delete', user_path(u), method: :delete %>
+		<%= link_to 'Delete', delete_user_path(u), method: :delete %>
 	<% end %>
 </div>
