--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
 		<div class="header">
 			<%= image_tag("/assets/images/black_lady.png", class: "image--black_lady") %>
 			<%= image_tag("/assets/images/logo-1-cropped.png", class: "image--logo_cropped") %>
+			<%= image_tag("/assets/images/lady_brown.png", class: "image--lady_brown") %>
 			<%= image_tag("/assets/images/lady_right.png", class: "image--lady_right") %>
 		</div>
 		<ul class="toolbar_top">
