--- a/app/assets/stylesheets/helpers/gradients.scss
+++ b/app/assets/stylesheets/helpers/gradients.scss
@@ -10,6 +10,17 @@
     filter:            progid:DXImageTransform.Microsoft.gradient(start-colourStr='#{$start-colour}', end-colourStr='#{$end-colour}', gradientType='1');
 }
 
+@mixin bg-linear-gradient-bottom($start-colour, $end-colour) {
+    background-color: $start-colour;
+    background-image: -webkit-gradient(linear, left top, left bottom, from($start-colour), to($end-colour));
+    background-image: -webkit-linear-gradient(top, $start-colour, $end-colour);
+    background-image:    -moz-linear-gradient(top, $start-colour, $end-colour);
+    background-image:     -ms-linear-gradient(top, $start-colour, $end-colour);
+    background-image:      -o-linear-gradient(top, $start-colour, $end-colour);
+    background-image:         linear-gradient(top, $start-colour, $end-colour);
+    filter:            progid:DXImageTransform.Microsoft.gradient(start-colourStr='#{$start-colour}', end-colourStr='#{$end-colour}');
+}
+
 @mixin bg-linear-gradient-image($start-colour, $end-colour, $image) {
     background-color: $start-colour;
     background-image: url($image), -webkit-gradient(linear, left top, right top, from($start-colour), to($end-colour));
