--- a/app/assets/stylesheets/themes/toolbar_bottom.scss
+++ b/app/assets/stylesheets/themes/toolbar_bottom.scss
@@ -2,13 +2,14 @@
 @import "breakpoint";
 
 %toolbar_bottom {
-		background-color: rgba(0, 0, 0, 0.5);
+		/* background-color: rgba(0, 0, 0, 1.0); */
 		position: fixed;
 		bottom: 0;
 		width: 100%;
 
 		@include container(30);		
 		@include breakpoint(map-get($screen, min) map-get($screen, max)) {
+				@include bg-linear-gradient-bottom(rgb(0, 0, 0), rgb(255, 102, 0));
 				* {
 						height: 2.2rem;
 				}
@@ -22,6 +23,7 @@
 				}
 		}
 		@include breakpoint(map-get($screen, max)) {
+				@include bg-linear-gradient(rgb(0, 0, 0), rgb(255, 102, 0));
 				* {
 						height: 2.5rem;
 				}
