Renamed News to Updates.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,7 @@
 				<% end  %>
 			</li>
 			<li class="list-item"><%= link_to dashboard_about_path do %>About<% end  %></li>
-			<li class="list-item">News</li>
+			<li class="list-item">Updates</li>
 			<li class="list-item"><%= link_to events_path do %>Events<% end  %></li>
 			<li class="list-item"><%= link_to dashboard_contact_path do %>Contact<% end  %></li>
 		</ul>
