Updated the tags in the contacts page.

--- a/app/views/dashboard/contact.html.erb
+++ b/app/views/dashboard/contact.html.erb
@@ -1,6 +1,8 @@
 <div class="content">
-	Telephone: (246) 236-4828
-	Email: rompinternational@gmail.com
-	Band House Address:
-	White Park Road, St. Michael, Barbados
+	<h4>Telephone:</h4>
+	<p>(246) 236-4828</p>
+	<h4>Email:</h4>
+	<p>rompinternational@gmail.com</p>
+	<h4>Band House Address:</h4>
+	<p>White Park Road, St. Michael, Barbados</p>
 </div>
