Added text shadows.

--- a/app/assets/stylesheets/themes/toolbar_top.scss
+++ b/app/assets/stylesheets/themes/toolbar_top.scss
@@ -38,6 +38,7 @@
 				.list-item {
 						/* @include span(3 of 30); */
 						/* margin-right: span(1 of 30); */
+						text-shadow: 0.15em 0.15em black;
 						float: left;
 						margin-right: 2rem;
 				}
