Styled contact page on the dashboard.

--- a/app/views/dashboard/contact.html.erb
+++ b/app/views/dashboard/contact.html.erb
@@ -1,8 +1,16 @@
-<div class="content">
-	<h4>Telephone:</h4>
-	<p>(246) 236-4828</p>
-	<h4>Email:</h4>
-	<p>rompinternational@gmail.com</p>
-	<h4>Band House Address:</h4>
-	<p>White Park Road, St. Michael, Barbados</p>
+<div class="contact_info content">
+	<div class="table">
+		<div class="table--row">
+			<div class="table--cell"><h4>Telephone:</h4></div>
+			<div class="table--cell"><p>(246) 236-4828</p></div>
+		</div>
+		<div class="table--row">
+			<div class="table--cell"><h4>Email:</h4></div>
+			<div class="table--cell"><p>rompinternational@gmail.com</p></div>
+		</div>
+		<div class="table--row">
+			<div class="table--cell"><h4>Band House Address:</h4></div>
+			<div class="table--cell"><p>White Park Road, </br>St. Michael, Barbados</p></div>
+		</div>
+	</div>
 </div>
