--- a/app/assets/stylesheets/themes/toolbar_top.scss
+++ b/app/assets/stylesheets/themes/toolbar_top.scss
@@ -1,11 +1,8 @@
 @import "susy";
 @import "breakpoint";
 
-$menu-item-height: 2.5rem;
-
 %toolbar_top {
 		background-color: rgba(255, 102, 0, 0.76);
-		height: 2.5rem;
 		padding-left: 0;
 		margin: {
 				top: 0;
@@ -19,9 +16,6 @@ $menu-item-height: 2.5rem;
 		}
 		@include link_color( rgb(0, 204, 255) );
 		@include breakpoint(map-get($screen, min) map-get($screen, max)) {
-				/* :first-child { */
-				/* 		height: 100%; */
-				/* } */
 				height: auto;
 				> * {
 						font: {
@@ -31,29 +25,47 @@ $menu-item-height: 2.5rem;
 						text-align: center;
 				}
 				.romp-icon {
-						height: $menu-item-height;
-						width: 40%;
+						height: 100%;
+						width: 100%;
+				}
+				.key-1443024456-icon {
+						height: 100%;
+						width: 50%;
+						margin-left: 0;
 				}
 				.list-item {
-						height: $menu-item-height;
+						height: 2.4rem;
+						@include span(8 of 30);
+						margin-right: span(11 of 30);
+						margin-left: span(11 of 30);
 				}
 		}
 		@include breakpoint(map-get($screen, max)) {
-				:first-child {
-						width: 10%;
-						margin-left: span(3 of 30) + gutter(30);
+				* {
+						height: 2.5rem;
 				}
 				.list-item {
 						text-shadow: 0.15em 0.15em black;
 						float: left;
 						margin-right: 2rem;
-				}
-				:last-child {
 						margin-left: 0;
 				}
+				.list-item--first {
+						width: 16rem;
+				}
+				:last-child {
+						float: right;
+						margin-right: 0;
+				}
 				.romp-icon {
-						height: 3rem;
+						height: 120%;
+						width: 140%;
+						margin: 0;
+				}
+				.key-1443024456-icon {
+						height: 100%;
 						width: 100%;
+						margin-left: 0;
 				}
 				* {
 						font: {
