--- a/app/assets/stylesheets/themes/toolbar_bottom.scss
+++ b/app/assets/stylesheets/themes/toolbar_bottom.scss
@@ -34,7 +34,8 @@
 				}
 				.image--logo_cropped {
 						@include span(3 of 30);
-						height: 4rem;
+						height: 3.5rem;
+						margin-top: 0.5rem;
 				}
 		}
 }
