--- a/app/assets/stylesheets/helpers/typography.scss
+++ b/app/assets/stylesheets/helpers/typography.scss
@@ -1,4 +1,4 @@
-@mixin link_color ($link, $visit: $link, $hover: $link, $active: $link) {
+@mixin link_color ($link, $hover: $link, $visit: $link, $active: $link) {
 		a {
 				text-decoration: none;
 				color: $link;
