--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,5 +1,11 @@
 <%= form_for @user, url: {action: "update"},
 	html: {class: "content"}, method: :patch do |f| %>
+	<%= f.label :first_name %>
+	<%= f.text_field :first_name %>
+
+	<%= f.label :last_name  %>
+	<%= f.text_field :last_name  %>
+
 	<%= f.label :email %>
 	<%= f.email_field :email %>
 
