--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,10 @@
 <%= form_for @user, url: {action: "create"}, html: {class: "content"} do |f| %>
+	<%= f.label :first_name %>
+	<%= f.text_field :first_name %>
+
+	<%= f.label :last_name  %>
+	<%= f.text_field :last_name  %>
+	
 	<%= f.label :email %>
 	<%= f.email_field :email %>
 
