--- a/app/views/dashboard/admin.html.erb
+++ b/app/views/dashboard/admin.html.erb
@@ -3,5 +3,6 @@
 		<li><%= link_to 'Create a new user', new_user_path %></li>
 		<li><%= link_to 'Create a new event', new_event_path %></li>
 		<li><%= link_to 'Create a new update', new_update_path %></li>
+		<li><%= link_to 'View all users', users_path %></li>
 	</ul>
 </div>
