Made modification related to CRUD on time.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,3 +3,6 @@
 @import "layout/settings";
 @import "themes/themes";
 @import "controllers/controllers";
+
+// Vendor stylesheet
+/* @import "base/jquery_datetimepicker"; */
