--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -8,10 +8,10 @@
 	<%= f.text_area :description %>
 	
 	<%= f.label :start %>
-	<%= f.date_field :start %>
+	<%= f.datetime_select :start %>
 	
 	<%= f.label :finish %>
-	<%= f.date_field :finish %>
+	<%= f.datetime_select :finish %>
 	
 	<%= f.label :location %>
 	<%= f.text_area :location %>
