--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -6,10 +6,10 @@
 	<%= f.text_area :description %>
 	
 	<%= f.label :start %>
-	<%= f.date_field :start %>
+	<%= f.datetime_select :start, default: DateTime.now %>
 	
 	<%= f.label :finish %>
-	<%= f.date_field :finish %>
+	<%= f.datetime_select :finish, default: DateTime.now %>
 	
 	<%= f.label :location %>
 	<%= f.text_area :location %>
