Added content_for calls.

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,3 +1,5 @@
+<% content_for :page_title, "Events" %>
+
 <div class="content events_content">
 	<% @events.each do |e| %>
 		<div class="event_link_group">
