--- a/app/views/updates/index.html.erb
+++ b/app/views/updates/index.html.erb
@@ -1,3 +1,5 @@
+<% content_for :page_title, "Updates" %>
+
 <div class="updates_content content">
 	<% @updates.each do |u| %>
 		<div class="updates_link_group">
