--- a/app/views/dashboard/contact.html.erb
+++ b/app/views/dashboard/contact.html.erb
@@ -1,3 +1,5 @@
+<% content_for :page_title, "Contact Info" %>
+
 <div class="contact_info content">
 	<div class="table">
 		<div class="table--row">
