--- a/app/views/updates/show.html.erb
+++ b/app/views/updates/show.html.erb
@@ -1,3 +1,5 @@
+<% content_for :page_title, @update.title %>
+
 <div class="content">
 	<h1><%= @update.title %></h1>
 	<p>	<%= @update.summary %></p>
